--- a/applications/bluegreen.yaml
+++ b/applications/bluegreen.yaml
@@ -2,10 +2,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: bluegreen
-  namespace: myproject-gitops
+  namespace: gitops
 spec:
   destination:
-    namespace: myproject-gitops
+    namespace: gitops
     server: https://kubernetes.default.svc
   project: default
   source:
