--- a/ads-b/app-frontend/ui-deployment.yaml
+++ b/ads-b/app-frontend/ui-deployment.yaml
@@ -28,7 +28,7 @@ spec:
           mountPath: /opt/app-root/src/.npm
         - name: config
           mountPath: "/opt/app-root/src/.env"
-          subpath: env
+          subPath: env
           readOnly: true
       securityContext:
         runAsNonRoot: true
